Design data models using Entity Framework Core

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,19 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Debug",
-      "Microsoft.AspNetCore": "Information",
-      "HotChocolate": "Debug"
-    }
-  },
   "Serilog": {
     "MinimumLevel": {
-      "Default": "Debug"
+      "Default": "Debug",
+      "Override": {
+        "Microsoft": "Information",
+        "Microsoft.Hosting.Lifetime": "Information",
+        "Microsoft.EntityFrameworkCore": "Information"
+      }
     }
-  },
-  "GraphQL": {
-    "EnableIntrospection": true,
-    "EnablePlayground": true,
-    "EnableSchemaRequests": true
   }
 }
