--- a/.gitignore
+++ b/.gitignore
@@ -236,6 +236,13 @@ CConversionReportFiles/
 *.ldf
 *.ndf
 
+# SQLite database files
+*.db
+*.db-shm
+*.db-wal
+*.sqlite
+*.sqlite3
+
 # Business Intelligence projects
 *.rdl.data
 *.bim.layout
