Fix GetDashBoardStats query

--- a/GraphQLApi.csproj
+++ b/GraphQLApi.csproj
@@ -20,4 +20,8 @@
     <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Remove="Tests/**" />
+  </ItemGroup>
+
 </Project>
