Implement Basic DataLoader for N+1 Problem
Fixes: #31

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -5,7 +5,8 @@
       "Override": {
         "Microsoft": "Information",
         "Microsoft.Hosting.Lifetime": "Information",
-        "Microsoft.EntityFrameworkCore": "Information"
+        "Microsoft.EntityFrameworkCore": "Information",
+        "Microsoft.EntityFrameworkCore.Database.Command": "Information"
       }
     }
   }
