--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -2,6 +2,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=graphql_api.db"
   },
+  "JwtSettings": {
+    "SecretKey": "YourSuperSecretJwtSigningKeyThatIsAtLeast32CharactersLong",
+    "Issuer": "GraphQLApi",
+    "Audience": "GraphQLApi",
+    "ExpirationHours": "24"
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
